# jailbreak-evaluation

./: Labellin_Guide.md  README.md  pyproject.toml
src/jailbreak_evaluation/: __init__.py  multifaceted.py  utils.py
tests/: lm_studio_test.py
